--- a/index.html
+++ b/index.html
@@ -1,35 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Profile card component</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | Decrypt</title>
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
+  <main id="main">
+    <img class="profile-pattern" src="./images/bg-pattern-card.svg" alt="profile pattern">
+    <div id="bio">
+      <img class="profile-picture" src="./images/image-victor.jpg" alt="profile picture">
+      <div class="bio-desc">
+        <div class="desc-info">
+          <h1>
+            Victor Crest
+          </h1>
+          <p>
+            26
+          </p>
+        </div>
+        <p class="desc-city">
+          London
+        </p>
+      </div>
+    </div>
 
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div id="social-media">
+      <div class="followers">
+        <h1>
+          80K
+        </h1>
+        <p>
+          Followers
+        </p>
+      </div>
+      <div class="likes">
+        <h1>
+          803K
+        </h1>
+        <p>
+          Likes
+        </p>
+      </div>
+      <div class="photos">
+        <h1>
+          1.4K
+        </h1>
+        <p>
+          Photos
+        </p>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
