Adjusting class name and alt description - Change ids to classes - Change img alt

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-  <main id="main">
+  <main class="main">
     <img class="profile-pattern" src="./images/bg-pattern-card.svg" alt="profile pattern">
     <div id="bio">
-      <img class="profile-picture" src="./images/image-victor.jpg" alt="profile picture">
+      <img class="profile-picture" src="./images/image-victor.jpg" alt="Victor Crest">
       <div class="bio-desc">
         <div class="desc-info">
           <h1>
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div id="social-media">
+    <div class="social-media">
       <div class="followers">
         <h1>
           80K
